# practical_ai_azure_keyvault

./: MANIFEST.in  README.md  __init__.py  azure_keyvault.py  pyproject.toml  requirements.txt  setup.py
